# sydtest-large-diffs

./: NOTICE  README.md  flake.nix  sydtest-large-diffs.cabal
test/Spec/: LargeDiffsSpec.hs
