cabal-version:      2.4
name:               sydtest-large-diffs
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Casper Association
maintainer:    morgan.a.s.thomas@gmail.com

library
  hs-source-dirs: src

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    Spec.LargeDiffsSpec

  build-depends:
    base >= 4.9 && < 5,
    hedgehog -any,
    sydtest,
    sydtest-discover,
    text -any,

  hs-source-dirs: test

  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N
